# ncbi-mcp

./: .env  .gitignore  .npmignore  Dockerfile  README.md  analyze_genes.py  debug-mcp.js  index.js  install-cursor.js  ncbi-mcp-1.0.1.tgz  ncbi-mcp-fast.py  ncbi-mcp.py  ncbi_client.py  ncbi_datasets_client.py  ncbi_mcp.py  ncbi_response.json  package-lock.json  package.json  plugin-fast.json  plugin.json  publish.js  pyproject.toml  reqs.jsonl  requirements.txt  setup.py  smithery.yaml  test-mcp.js  test_genome_info.jsonl  test_ncbi_fetch.jsonl  test_ncbi_mcp.py
.cursor/: mcp.json
ncbi_datasets/: __init__.py  client.py
ncbi_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: __init__.py  __main__.py  server.py
src/server/: __init__.py  server.py
temp/: ion  ncbi_requests.json
tests/: test-fast-mcp.py  test-mcp-cursor.py  test-mcp-prompt.py  test-mcp-tool.py  test-mcp.js  test-request.py
